Fix page jumping when switching between contrib image and desc.

--- a/styles/prosilver/theme/common.css
+++ b/styles/prosilver/theme/common.css
@@ -412,7 +412,7 @@ a.screenshot img, img.screenshot {
 	position: relative;
 }
 
-.quickview-image, .quickview-desc {
+.quickview-preview {
 	height: 130px;
 	margin-top: 5px;
 }
